Add the command to the plugin file. Actually open the GUI

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,10 @@ name: ${project.artifactId}
 main: me.tekkitcommando.auctionhouse.AuctionHouse
 version: ${project.version}
 authors: [TekkitCommando]
+
+depend: [Vault]
+
+commands:
+  auction:
+    usage: /auction [page]
+    aliases: auc
